# kuhaku-agent-cli

./: .gitignore  CLAUDE.md  LICENSE  NOTICE  README.en.md  README.md  env.example  pyproject.toml
.claude/: settings.json
.claude/skills/kuhaku-agent-dev/: SKILL.md
.claude/skills/kuhaku-agent-dev/references/: adding-surface.md  approval-flow.md  architecture.md  image-attachments.md  init-command.md  troubleshooting.md
.claude/skills/kuhaku-agent-dev/scripts/: doctor.sh
src/kuhaku_agent/: __init__.py  __main__.py  backend.py  banner.py  cli.py  coordinator.py  events.py  init_ops.py  runner.py  settings.py  thread_store.py  tool_labels.py
src/kuhaku_agent/surfaces/: __init__.py  base.py
src/kuhaku_agent/surfaces/slack/: __init__.py  diagnostics.py  streamer.py  surface.py
